add changable hotkey for PC Manager
- raised the version of all modules in the collector's configuration

--- a/powercraft/src/main/resources/assets/powercraft/lang/ru_RU.lang
+++ b/powercraft/src/main/resources/assets/powercraft/lang/ru_RU.lang
@@ -21,3 +21,4 @@ Packs=Пакеты
 Modules=Модули
 PowerCraft Updates=Обновления PowerCraft
 Install all=Установить всё
+key.pc_manager=PowerCraft Manager
